Applied requested changes

--- a/expenses-manager-frontend/src/main/frontend/src/app/login/login.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/login/login.component.html
@@ -1,17 +1,12 @@
 <div class="b-login">
-    <div class="login-overlay">
-
-    </div>
-
     <div class="logo">
-        <img class="logo-icon" src="../../assets/images/logo.svg">
+        <img class="logo-icon" src="../../assets/images/logo.svg" alt="logo">
         <h1 class="logo-text">Expenses Manager</h1>
     </div>
 
     <form class="login-form">
-        <input class="username-input" type="text" placeholder="Enter User Name here"/>
+        <input class="username-input" type="text" placeholder="Enter User Name here" aria-label="username-input"/>
 
-        <button mat-button class="login-button" type="submit">Login</button>
-
+        <button mat-button class="login-button" type="submit" aria-label="login-button">Login</button>
     </form>
 </div>
