Applied requested changes

--- a/expenses-manager-frontend/src/main/frontend/src/app/sidebar/sidebar.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
-<mat-sidenav-container class="sidebar">
+<mat-sidenav-container class="b-sidebar">
     <mat-sidenav>Start</mat-sidenav>
     <mat-sidenav-content class="content">
-        <img src="../../assets/images/logo.svg" class="logo">
-        <p class="logo">Expenses Manager</p>
+        <img src="../../assets/images/logo.svg" class="logo-image" alt="logo">
+        <p class="logo-title">Expenses Manager</p>
         <a class="sidebar-button" mat-flat-button routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]={exact:true}>
             <mat-icon>home</mat-icon>
             Home
