--- a/expenses-manager-frontend/src/main/frontend/src/styles.css
+++ b/expenses-manager-frontend/src/main/frontend/src/styles.css
@@ -1,8 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
 body{
     width: 100%;
     height: 100%;
     margin: 0px;
+    font-family: "Outlet";
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+:root{
+    --primary-color: #4F46E5;
+}
