Fixed the logos

--- a/expenses-manager-frontend/src/main/frontend/src/app/login/login.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="b-login">
     <div class="logo">
-        <img class="logo-icon" src="../../assets/images/logo.svg" alt="logo">
+        <img class="logo-icon" src="../../assets/images/big_logo.svg" alt="logo">
         <h1 class="logo-text">Expenses Manager</h1>
     </div>
 
