--- a/expenses-manager-frontend/src/main/frontend/src/app/sidebar/sidebar.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="b-sidebar">
     <mat-sidenav>Start</mat-sidenav>
     <mat-sidenav-content class="content">
-        <img src="../../assets/images/logo.svg" class="logo-image" alt="logo">
+        <img src="../../assets/images/small_logo.svg" class="logo-image" alt="logo">
         <p class="logo-title">Expenses Manager</p>
         <a class="sidebar-button" mat-flat-button routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]={exact:true}>
             <mat-icon>home</mat-icon>
