Add topbar and sidebar to all pages
- Deleted sidebar from all pages
- Added sidebar and topbar to app component and excluded them from login page
- Adjusted topbar dimensions

--- a/expenses-manager-frontend/src/main/frontend/src/app/app.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/app.component.html
@@ -1,1 +1,5 @@
 <router-outlet></router-outlet>
+<div class="container" *ngIf="routes.url != '/login'">
+    <app-sidebar></app-sidebar>
+    <app-topbar></app-topbar>
+</div>
