--- a/expenses-manager-frontend/src/main/frontend/src/app/topbar/topbar.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/topbar/topbar.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group dynamicHeight mat-stretch-tabs animationDuration="0ms" (selectedIndexChange)="onTabChange($event)">
+<mat-tab-group animationDuration="0ms" (selectedIndexChange)="onTabChange($event)">
     <mat-tab *ngFor="let tab of tabs" [label]="tab">
         <h1>{{data}}</h1>
     </mat-tab>
