--- a/expenses-manager-frontend/src/main/frontend/src/app/home/home.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<app-sidebar></app-sidebar>
+<div class="b-home">
+    <div class="sidebar">
+        <app-sidebar></app-sidebar>
+    </div>
+    <div class="content">
+        <button mat-button class="add-expense-button" (click)="openDialog()">+</button>
+    </div>
+</div>
