--- a/expenses-manager-frontend/src/main/frontend/src/app/login/login.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/login/login.component.html
@@ -7,6 +7,6 @@
     <form class="login-form">
         <input class="username-input" type="text" placeholder="Enter User Name here" aria-label="username-input" [(ngModel)]="name" [ngModelOptions]="{standalone: true}"/>
 
-        <a mat-button class="login-button" type="submit" aria-label="login-button" (click)="loginUser()" routerLink="/" >Login</a>
+        <a mat-button class="login-button" type="submit" aria-label="login-button" (click)="loginUser()" >Login</a>
     </form>
 </div>
