--- a/expenses-manager-frontend/src/main/frontend/src/app/add-expense-dialog/add-expense-dialog.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/add-expense-dialog/add-expense-dialog.component.html
@@ -5,35 +5,27 @@
     <label class="form-label">Date</label>
     <div class="input-group">
       <div class="date-icon">
-        <span class="input-group-text icons" (click)="focusDateInput()"><i class="glyphicon glyphicon-calendar"></i></span>
+        <span class="icons"><i class="glyphicon glyphicon-calendar"></i></span>
       </div>
-      <input type="date" class="form-control input-date" onfocus="this.showPicker()" tabindex="-1" id="dateInput" aria-label="date-input">
+      <input type="date" class="form-control input-date" onclick="this.showPicker()" id="dateInput" aria-label="date-input">
     </div>
   </div>
   <div class="col-md-12 mb-3 d-flex align-items-center">
     <label class="form-label">Category</label>
-    <select class="input-category" tabindex="-1" aria-label="category-input">
-      <option value="food-restaurants">Food & Restaurants</option>
-      <option value="car">Car</option>
-      <option value="subscriptions">Subscriptions</option>
-      <option value="entertainment">Entertainment</option>
-      <option value="education">Education</option>
-      <option value="clothing">Clothing</option>
-      <option value="health">Health</option>
+    <select class="input-category"  aria-label="category-input">
+      <option *ngFor="let category of categories" [value]="category">{{category}}</option>
     </select>
   </div>
   <div class="col-md-12 mb-3 d-flex align-items-center">
     <label class="form-label">Currency</label>
     <div class="input-group">
       <div class="currency-icon">
-        <span class="input-group-text icons" *ngIf="selectedCurrency==='USD'" (click)="focusCurrencyInput()"><fa-icon [icon]="['fas', 'dollar-sign']"></fa-icon></span>
-        <span class="input-group-text icons" *ngIf="selectedCurrency==='EUR'" (click)="focusCurrencyInput()"><fa-icon [icon]="['fas', 'euro-sign']"></fa-icon></span>
-        <span class="input-group-text icons" *ngIf="selectedCurrency==='RON'" (click)="focusCurrencyInput()"></span>
+        <span class="icons" *ngIf="selectedCurrency==='US Dolar'"><fa-icon [icon]="['fas', 'dollar-sign']"></fa-icon></span>
+        <span class="icons" *ngIf="selectedCurrency==='Euro'"><fa-icon [icon]="['fas', 'euro-sign']"></fa-icon></span>
+        <span class="icons" *ngIf="selectedCurrency==='RON'"></span>
       </div>
-      <select class="input-currency" tabindex="-1" [(ngModel)]="selectedCurrency" [ngModelOptions]="{standalone: true}" id="currencyInput" aria-label="currency-input">
-        <option value="RON">RON</option>
-        <option value="EUR">Euro</option>
-        <option value="USD">US Dolar</option>
+      <select class="input-currency" [(ngModel)]="selectedCurrency" [ngModelOptions]="{standalone: true}" id="currencyInput" aria-label="currency-input">
+        <option *ngFor="let currency of currencies" [value]="currency">{{currency}}</option>
       </select>
     </div>
   </div>
@@ -41,20 +33,20 @@
     <label class="form-label">Amount</label>
     <div class="input-group">
       <div class="currency-icon">
-        <span class="input-group-text icons" *ngIf="selectedCurrency==='USD'" (click)="focusAmountInput()"><fa-icon [icon]="['fas', 'dollar-sign']"></fa-icon></span>
-        <span class="input-group-text icons" *ngIf="selectedCurrency==='EUR'" (click)="focusAmountInput()"><fa-icon [icon]="['fas', 'euro-sign']"></fa-icon></span>
-        <span class="input-group-text icons" *ngIf="selectedCurrency==='RON'" (click)="focusAmountInput()"></span>
+        <span class="icons" *ngIf="selectedCurrency==='US Dolar'"><fa-icon [icon]="['fas', 'dollar-sign']"></fa-icon></span>
+        <span class="icons" *ngIf="selectedCurrency==='Euro'"><fa-icon [icon]="['fas', 'euro-sign']"></fa-icon></span>
+        <span class="icons" *ngIf="selectedCurrency==='RON'"></span>
       </div>
-      <input type="number" class="input-amount" tabindex="-1" id="amountInput" aria-label="amount-input">
+      <input type="number" class="input-amount" id="amountInput" aria-label="amount-input">
     </div>
   </div>
   <div class="col-md-12 mb-3 d-flex align-items-center">
     <label class="form-label">Description</label>
-    <textarea class="input-description" tabindex="-1" aria-label="description-input"></textarea>
+    <textarea class="input-description" aria-label="description-input"></textarea>
   </div>
 </form>
 
 <div class="buttons">
-  <button mat-button class="cancel-button" tabindex="-1" aria-label="cancel-button">Cancel</button>
-  <button mat-button class="add-expense-button" tabindex="-1" aria-label="add-expense-button">Add expense</button>
+  <button class="cancel-button" aria-label="cancel-button" (click)="closeDialog()">Cancel</button>
+  <button class="add-expense-button" aria-label="add-expense-button">Add expense</button>
 </div>
