--- a/expenses-manager-frontend/src/main/frontend/src/app/home/home.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/home/home.component.scss
@@ -1,13 +1,8 @@
 .b-home{
     block-size: 100%;
-    .sidebar{
-        inline-size: 25rem;
-        block-size: 100%;
-        float: left;
-    }
 
     .content{
-        inline-size:calc(100% - 25rem);
+        inline-size: 100%;
         margin-top: 10rem;
         float: right;
         .add-expense-button{
