--- a/expenses-manager-frontend/src/main/frontend/src/styles.css
+++ b/expenses-manager-frontend/src/main/frontend/src/styles.css
@@ -6,7 +6,7 @@ html, body {
     inline-size: 100%;
     block-size: 100%;
     margin: 0;
-    font-family: "Outlet"; 
+    font-family: "Outfit"; 
     font-size: 62.5%;
 }
 
