--- a/expenses-manager-frontend/src/main/frontend/src/app/add-expense-dialog/add-expense-dialog.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/add-expense-dialog/add-expense-dialog.component.html
@@ -1,6 +1,8 @@
-<h1><b><fa-icon [icon]="['fas', 'money-bill']"></fa-icon> Add expense</b></h1>
+<h1><fa-icon [icon]="['fas', 'money-bill']"></fa-icon> Add expense</h1>
 
 <form class="expense-form">
+
+  <!--date input div-->
   <div class="col-md-12 mb-3 d-flex align-items-center">
     <label class="form-label">Date</label>
     <div class="input-group">
@@ -10,12 +12,16 @@
       <input type="date" class="form-control input-date" onclick="this.showPicker()" id="dateInput" aria-label="date-input">
     </div>
   </div>
+
+  <!--category input div-->
   <div class="col-md-12 mb-3 d-flex align-items-center">
     <label class="form-label">Category</label>
     <select class="input-category"  aria-label="category-input">
       <option *ngFor="let category of categories" [value]="category">{{category}}</option>
     </select>
   </div>
+
+  <!--currency input div-->
   <div class="col-md-12 mb-3 d-flex align-items-center">
     <label class="form-label">Currency</label>
     <div class="input-group">
@@ -29,6 +35,8 @@
       </select>
     </div>
   </div>
+
+  <!--amount input div-->
   <div class="col-md-12 mb-3 d-flex align-items-center">
     <label class="form-label">Amount</label>
     <div class="input-group">
@@ -40,12 +48,15 @@
       <input type="number" class="input-amount" id="amountInput" aria-label="amount-input">
     </div>
   </div>
+
+  <!--description input div-->
   <div class="col-md-12 mb-3 d-flex align-items-center">
     <label class="form-label">Description</label>
     <textarea class="input-description" aria-label="description-input"></textarea>
   </div>
 </form>
 
+<!--buttons div-->
 <div class="buttons">
   <button class="cancel-button" aria-label="cancel-button" (click)="closeDialog()">Cancel</button>
   <button class="add-expense-button" aria-label="add-expense-button">Add expense</button>
