--- a/expenses-manager-frontend/src/main/frontend/src/app/daily-stats/daily-stats.component.css
+++ b/expenses-manager-frontend/src/main/frontend/src/app/daily-stats/daily-stats.component.css
@@ -1,69 +1,21 @@
-.main-container {
-    display: flex;
-}
-
-.content-wrapper {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-}
-
-.header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.total-amount {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-}
-
-.total-amount h1 {
-    margin: 0;
-    font-size: 36px;
-    font-weight: bold;
-}
-
-.period-tabs {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 10px;
-}
-
-.period-tabs a {
-    text-decoration: none;
-    font-size: 18px;
-    color: black;
-    cursor: pointer;
-}
-
-.period-tabs a.active {
-    border-bottom: 2px solid #673ab7; /* Exemplu pentru tab activ */
-}
-
 .dashboard-container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    padding-top: 20px;
-    height: 100vh;
+    padding: 1.25rem;
 }
 
 .chart-container {
     display: flex;
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    align-items: center;
+    background-color: var(--background-color);
+    padding: 1.25rem;
+    border-radius: 0.625rem;
+    box-shadow: 0 0.25rem 0.5rem var(--shadow-color);
 }
 
 ngx-charts-pie-chart {
-    margin-right: 20px;
+    margin-right: 1.25rem;
 }
 
 .legend-container {
@@ -81,13 +33,37 @@ ngx-charts-pie-chart {
 .legend-container li {
     display: flex;
     align-items: center;
-    margin-bottom: 8px;
+    margin-bottom: 0.5rem;
 }
 
 .legend-color {
-    width: 12px;
-    height: 12px;
+    width: 0.75rem;
+    height: 0.75rem;
     display: inline-block;
-    margin-right: 8px;
+    margin-right: 0.5rem;
     border-radius: 50%;
+}
+
+.legend-color:nth-child(1) {
+    background-color: var(--food-restaurant-color);
+}
+
+.legend-color:nth-child(2) {
+    background-color: var(--car-color);
+}
+
+.legend-color:nth-child(3) {
+    background-color: var(--subscriptions-color);
+}
+
+.legend-color:nth-child(4) {
+    background-color: var(--entertainment-color);
+}
+
+.legend-color:nth-child(5) {
+    background-color: var(--coffee-color);
+}
+
+.mat-form-field {
+    margin-bottom: 1.25rem;
 }
