--- a/expenses-manager-frontend/src/main/frontend/src/app/home/home.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/home/home.component.html
@@ -1,2 +1,5 @@
-<app-sidebar></app-sidebar>
-<app-daily-stats></app-daily-stats> 
+<div class="b-home">
+    <div class="content">
+        <button mat-button class="add-expense-button" (click)="openDialog()">+</button>
+    </div>
+</div>
