--- a/expenses-manager-frontend/src/main/frontend/src/app/add-expense-dialog/add-expense-dialog.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/add-expense-dialog/add-expense-dialog.component.html
@@ -9,14 +9,14 @@
       <div class="date-icon">
         <span class="icons"><i class="glyphicon glyphicon-calendar"></i></span>
       </div>
-      <input type="date" class="form-control input-date" onclick="this.showPicker()" id="dateInput" aria-label="date-input">
+      <input type="date" class="form-control input-date" [(ngModel)]="selectedDate" [ngModelOptions]="{standalone: true}" onclick="this.showPicker()" id="dateInput" aria-label="date-input" required>
     </div>
   </div>
 
   <!--category input div-->
   <div class="col-md-12 mb-3 d-flex align-items-center">
     <label class="form-label">Category</label>
-    <select class="input-category"  aria-label="category-input">
+    <select class="input-category" [(ngModel)]="selectedCategory" [ngModelOptions]="{standalone: true}" aria-label="category-input" required>
       <option *ngFor="let category of categories" [value]="category">{{category}}</option>
     </select>
   </div>
@@ -26,11 +26,10 @@
     <label class="form-label">Currency</label>
     <div class="input-group">
       <div class="currency-icon">
-        <span class="icons" *ngIf="selectedCurrency==='US Dolar'"><fa-icon [icon]="['fas', 'dollar-sign']"></fa-icon></span>
-        <span class="icons" *ngIf="selectedCurrency==='Euro'"><fa-icon [icon]="['fas', 'euro-sign']"></fa-icon></span>
-        <span class="icons" *ngIf="selectedCurrency==='RON'"></span>
+        <span class="icons" *ngIf="selectedCurrency==='USD'"><fa-icon [icon]="['fas', 'dollar-sign']"></fa-icon></span>
+        <span class="icons" *ngIf="selectedCurrency==='EUR'"><fa-icon [icon]="['fas', 'euro-sign']"></fa-icon></span>
       </div>
-      <select class="input-currency" [(ngModel)]="selectedCurrency" [ngModelOptions]="{standalone: true}" id="currencyInput" aria-label="currency-input">
+      <select class="input-currency" [(ngModel)]="selectedCurrency" [ngModelOptions]="{standalone: true}" id="currencyInput" aria-label="currency-input" required>
         <option *ngFor="let currency of currencies" [value]="currency">{{currency}}</option>
       </select>
     </div>
@@ -41,23 +40,22 @@
     <label class="form-label">Amount</label>
     <div class="input-group">
       <div class="currency-icon">
-        <span class="icons" *ngIf="selectedCurrency==='US Dolar'"><fa-icon [icon]="['fas', 'dollar-sign']"></fa-icon></span>
-        <span class="icons" *ngIf="selectedCurrency==='Euro'"><fa-icon [icon]="['fas', 'euro-sign']"></fa-icon></span>
-        <span class="icons" *ngIf="selectedCurrency==='RON'"></span>
+        <span class="icons" *ngIf="selectedCurrency==='USD'"><fa-icon [icon]="['fas', 'dollar-sign']"></fa-icon></span>
+        <span class="icons" *ngIf="selectedCurrency==='EUR'"><fa-icon [icon]="['fas', 'euro-sign']"></fa-icon></span>
       </div>
-      <input type="number" class="input-amount" id="amountInput" aria-label="amount-input">
+      <input type="number" class="input-amount" [(ngModel)]="selectedAmount" [ngModelOptions]="{standalone: true}" id="amountInput" aria-label="amount-input" required>
     </div>
   </div>
 
   <!--description input div-->
   <div class="col-md-12 mb-3 d-flex align-items-center">
     <label class="form-label">Description</label>
-    <textarea class="input-description" aria-label="description-input"></textarea>
+    <textarea class="input-description" [(ngModel)]="description" [ngModelOptions]="{standalone: true}" aria-label="description-input"></textarea>
   </div>
 </form>
 
 <!--buttons div-->
 <div class="buttons">
   <button class="cancel-button" aria-label="cancel-button" (click)="closeDialog()">Cancel</button>
-  <button class="add-expense-button" aria-label="add-expense-button">Add expense</button>
+  <button class="add-expense-button" aria-label="add-expense-button" (click)="log()">Add expense</button>
 </div>
