--- a/expenses-manager-frontend/src/main/frontend/src/styles.css
+++ b/expenses-manager-frontend/src/main/frontend/src/styles.css
@@ -1,7 +1,6 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
-
 html, body {   
     inline-size: 100%;
     block-size: 100%;
@@ -10,18 +9,12 @@ html, body {
     font-size: 62.5%;
 }
 
-:root{
+:root {
     --primary-color: #4F46E5;
     --secondary-color: #E9F0FF;
     --input-border-color: #646a77;
     --input-selected-border-color: #007bff;
 
-    --food-restaurant-color: #46B1D9;
-    --car-color: #5844E3;
-    --subscriptions-color: #E047AB;
-    --entertainment-color: #F78486;
-    --coffee-color: #A1D12E;
-
-    --background-color: #ffffff;
+    --light-background-color: #ffffff;
     --shadow-color: rgba(0, 0, 0, 0.1);
 }
