Integrate add expense modal into topbar

--- a/expenses-manager-frontend/src/main/frontend/src/app/topbar/topbar.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/topbar/topbar.component.scss
@@ -25,3 +25,22 @@
 .mat-tab-group .mat-tab-label-active {
     color: var(--primary-color);
 }
+
+.b-home{
+    margin-top: 0.5rem;
+    display: flex;
+    justify-content: center;
+    .add-expense-button{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-inline-size: 0rem;
+        inline-size: 5rem;
+        aspect-ratio: 1;
+        background-color: var(--primary-color);
+        color: white;
+        border-radius: 100%;
+        font-size: 4rem;
+        font-weight: lighter;
+    }
+}
