--- a/expenses-manager-frontend/src/main/frontend/src/app/topbar/topbar.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/topbar/topbar.component.html
@@ -1,5 +1,18 @@
-<mat-tab-group animationDuration="0ms" (selectedIndexChange)="onTabChange($event)">
+<mat-tab-group dynamicHeight animationDuration="0ms" (selectedIndexChange)="onTabChange($event)">
     <mat-tab *ngFor="let tab of tabs" [label]="tab">
-        <h1>{{data}}</h1>
+        <ng-container [ngSwitch]="router.url">
+          <ng-container *ngSwitchCase="'/'">
+            <h1>{{data}}</h1>
+            <div class="b-home">
+                  <button mat-button class="add-expense-button" (click)="openDialog()">+</button>
+            </div>
+          </ng-container>
+          <ng-container *ngSwitchCase="'/expenses'">
+            <h1>Expenses work!</h1>
+          </ng-container>
+          <ng-container *ngSwitchCase="'/reports'">
+            <h1>Reports work!</h1>
+          </ng-container>
+        </ng-container>
     </mat-tab>
 </mat-tab-group>
