Bind topbar's total amount to backend
+ Changed route for HomeComponent to "home"
+ Eliminated "/" from baseUrl to avoid confusion
+ Modified UserService and ExpenseService to match with feature/EXM-10-create-modal-add-expense
+ Replaced width and height to inline-size and block-size

--- a/expenses-manager-frontend/src/main/frontend/src/app/sidebar/sidebar.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <mat-sidenav-content class="content">
         <img src="../../assets/images/small_logo.svg" class="logo-image" alt="logo">
         <p class="logo-title">Expenses Manager</p>
-        <a class="sidebar-button" mat-flat-button routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]={exact:true}>
+        <a class="sidebar-button" mat-flat-button routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]={exact:true}>
             <mat-icon>home</mat-icon>
             Home
         </a>
