--- a/expenses-manager-frontend/src/main/frontend/src/app/topbar/topbar.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/topbar/topbar.component.html
@@ -1,8 +1,8 @@
 <mat-tab-group dynamicHeight animationDuration="0ms" (selectedIndexChange)="onTabChange($event)">
     <mat-tab *ngFor="let tab of tabs" [label]="tab">
         <ng-container [ngSwitch]="router.url">
-          <ng-container *ngSwitchCase="'/'">
-            <h1>{{data}}</h1>
+          <ng-container *ngSwitchCase="'/home'">
+            <h1>{{currency + totalAmount}}</h1>
             <div class="b-home">
                   <button mat-button class="add-expense-button" (click)="openDialog()">+</button>
             </div>
