Add initial recents list
+ SVG files of icons for each category
+ Updated colors of predefined categories

--- a/expenses-manager-frontend/src/main/frontend/src/app/app.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/app.component.html
@@ -9,4 +9,5 @@
 <div class="container" *ngIf="routes.url != '/login'">
     <app-sidebar></app-sidebar>
     <app-topbar></app-topbar>
+    <app-right-sidebar></app-right-sidebar>
 </div>
