--- a/expenses-manager-frontend/src/main/frontend/src/app/app.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .container{
     display: grid;
-    grid-template-columns: 22rem 1fr;
+    grid-template-columns: 22rem 1fr 1fr;
     height: 100%;
     float: left;
     padding-left: 0%;
