--- a/expenses-manager-frontend/src/main/frontend/src/styles.css
+++ b/expenses-manager-frontend/src/main/frontend/src/styles.css
@@ -5,8 +5,7 @@
 html, body {   
     inline-size: 100%;
     block-size: 100%;
-    margin: 0;
-    font-family: "Outfit", sans-serif !important; 
+    margin: 0; 
     font-size: 62.5%;
 }
 
@@ -15,5 +14,7 @@ html, body {
     --secondary-color: #E9F0FF;
     --input-border-color: #646a77;
     --input-selected-border-color: #007bff;
+    --font-color: #2a2c35;
+    --font-family: "Outfit", sans-serif !important; 
 }
 
