--- a/expenses-manager-frontend/src/main/frontend/src/app/expense-table/expense-table.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/expense-table/expense-table.component.scss
@@ -1,8 +1,52 @@
+.datepicker-wrapper {
+    inline-size: 80rem;
+    block-size: 4rem;
+    margin-top: 5.6rem;
+    margin-left: 1.4rem;
+    box-shadow: 0rem 0rem 2rem rgba(0, 0, 0, 0.2);
+    position: relative;
+
+    .datepicker-buttons{
+        display: flex;
+        justify-content: space-between;
+        height: 100%;
+
+        .date-buttons{
+            display: inline-flex;
+            align-items: center;
+            background: none;
+            font-family: var(--font-family);
+            font-weight: 600;
+            border: none;
+            background: none;
+        }
+
+        .date-picker-button{
+            position: relative;
+        }
+
+        .hidden-datepicker-input {
+            position: absolute;
+            opacity: 0;
+            inline-size: 0rem;
+            block-size: 0rem;
+            bottom: 1.2rem;
+            left: 0.5rem;
+          }
+    }
+}
+  
+::ng-deep .mat-calendar-period-button {
+    display: none !important;
+  }
+
 .expense-table{
     inline-size: 80rem;
     margin-left: 1.4rem;
+    margin-top: 1.6rem;
+    margin-right: 5rem;
     font-family: var(--font-family);
-    box-shadow: none;
+    box-shadow: 0rem 0rem 2rem rgba(0, 0, 0, 0.2);
 
     .column{
         padding: 1.6rem;
@@ -61,9 +105,13 @@
 .paginator{
     inline-size: 80rem;
     block-size: 4rem;
-    margin-top: 3rem;
+    margin-top: 1.6rem;
+    margin-left: 1.4rem;
+    margin-bottom: 2rem;
     display: flex;
     justify-content: center;
+    
+    box-shadow: 0rem 0rem 2rem rgba(0, 0, 0, 0.2);
 
     .paginator-button{
         inline-size: 3.2rem;
@@ -75,7 +123,7 @@
 
         &.active{
             border-radius: 1rem;
-            border-color: var(--primary-color);
+            border: solid var(--primary-color);
             color: var(--primary-color);
         }
 
@@ -86,43 +134,5 @@
 
 }
 
-.datepicker-wrapper {
-    margin-top: 5.6rem;
-    margin-left: 1.4rem;
-    position: relative;
-
-    .datepicker-buttons{
-        inline-size: 80rem;
-        display: flex;
-        justify-content: space-between;
-
-        .date-buttons{
-            display: inline-flex;
-            align-items: center;
-            background: none;
-            font-family: var(--font-family);
-            font-weight: 600;
-            border: none;
-            background: none;
-        }
-
-        .date-picker-button{
-            position: relative;
-        }
-
-        .hidden-datepicker-input {
-            position: absolute;
-            opacity: 0;
-            inline-size: 0rem;
-            block-size: 0rem;
-            bottom: -0.2rem;
-            left: 0.5rem;
-          }
-    }
-}
-  
-::ng-deep .mat-calendar-period-button {
-    display: none !important;
-  }
 
   
