--- a/expenses-manager-frontend/src/main/frontend/src/app/topbar/topbar.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/topbar/topbar.component.html
@@ -9,7 +9,7 @@
           </div>
         </ng-container>
         <ng-container *ngSwitchCase="'/expenses'" style="font-family: 'Outfit', sans-serif !important;">
-          <app-expense-table class="expenses-tab"></app-expense-table>
+          <app-expense-table class="expenses-tab" selectedTab="{{tab}}"></app-expense-table>
         </ng-container>
         <ng-container *ngSwitchCase="'/reports'">
           <h1>Reports work!</h1>
