EXM-26-sidebar-adjustments
-applied requested sidebar changes
-fixed a bug for getting monthly expenses
-fixed a bug when the table had 5 or less pages

--- a/expenses-manager-frontend/src/main/frontend/src/app/expense-table/expense-table.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/expense-table/expense-table.component.html
@@ -106,7 +106,7 @@
   </button>
 
   <!-- Puncte "..." înainte, dacă suntem pe pagina 5 sau mai departe -->
-  <button class="paginator-button" *ngIf="currentPage > 3">
+  <button class="paginator-button" *ngIf="(currentPage > 3) && (maxPages > 5)">
     ...
   </button>
 
@@ -118,12 +118,12 @@
   </ng-container>
 
   <!-- Puncte "..." după, dacă suntem pe pagina 6 sau mai înainte și sunt mai multe pagini -->
-  <button class="paginator-button" *ngIf="currentPage < maxPages - 2">
+  <button class="paginator-button" *ngIf="(currentPage < maxPages - 2) && (maxPages > 5)">
     ...
   </button>
 
   <!-- Ultima pagină -->
-  <button class="paginator-button" (click)="goToPage(maxPages)" [class.active]="currentPage === maxPages">
+  <button class="paginator-button" (click)="goToPage(maxPages)" [class.active]="currentPage === maxPages" *ngIf="maxPages > 5">
     {{ maxPages }}
   </button>
 
