Applied requested changes

--- a/expenses-manager-frontend/src/main/frontend/src/app/sidebar/sidebar.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
             <mat-icon>pie_chart</mat-icon>
             Reports
         </a>
-        <a class="sidebar-button" mat-flat-button routerLink="/login" >
+        <a class="sidebar-button" mat-flat-button (click)="logout()" >
             <mat-icon>logout</mat-icon>
             Log Out
         </a>
