Add user name and currency dropdown
+ Made right sidebar list reload when the currency changes from the dropdown

--- a/expenses-manager-frontend/src/main/frontend/src/app/right-sidebar/right-sidebar.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/right-sidebar/right-sidebar.component.html
@@ -1,12 +1,22 @@
-<mat-list>
-  <mat-divider></mat-divider>
+<div class="horizontal-container"> 
+  <h2>{{ userName }}</h2>
+  <mat-select *ngIf="router.url == '/home'" (selectionChange)="onCurrencyChange($event.value)">
+    <mat-option *ngFor="let currency of currencies" [value]="currency.code"> 
+      <fa-icon *ngIf="currency.code == 'USD'" [icon]="['fas', 'dollar-sign']"></fa-icon>
+      <fa-icon *ngIf="currency.code == 'EUR'" [icon]="['fas', 'euro-sign']"></fa-icon>
+      {{ currency.code }} 
+    </mat-option>
+  </mat-select>
+</div>
+<mat-divider class="outer-divider"></mat-divider>
+<mat-list *ngIf="router.url == '/home'">
   <div *ngFor="let date of filteredExpenses | keyvalue">
     <h2 mat-subheader>{{ date.key }}</h2>
     <mat-divider></mat-divider>
     <mat-list-item *ngFor="let item of date.value | keyvalue">
       <img src="../../assets/icons/{{ item.key }}.svg" class="icon-image" alt="icon">
       <h2 class="category">{{ item.key }}</h2>
-      <h2 class="price-tag">{{currency + item.value}}</h2>
+      <h2 class="price-tag">{{reloadService.getCurrentCurrency() + item.value}}</h2>
       <mat-divider></mat-divider>
     </mat-list-item>
   </div>
