Added notifications on frontend
-added notification component
-added notification service
-called functions to show notifications when adding expense and when logging in

--- a/expenses-manager-frontend/src/main/frontend/src/app/app.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/app.component.scss
@@ -5,3 +5,11 @@
     float: left;
     padding-left: 0%;
 }
+
+.notifications{
+    position:fixed;
+    top: 2rem; 
+    left: 2rem; 
+    inline-size: calc(100% - 4rem);
+    z-index: 1000; 
+}
