--- a/expenses-manager-frontend/src/main/frontend/src/app/topbar/topbar.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/topbar/topbar.component.html
@@ -1,4 +1,3 @@
-
 <mat-tab-group dynamicHeight animationDuration="0ms" (selectedIndexChange)="onTabChange($event)">
     <mat-tab *ngFor="let tab of tabs" [label]="tab">
       <ng-container [ngSwitch]="router.url">
@@ -7,7 +6,9 @@
           <div class="b-home">
             <button mat-button class="add-expense-button" (click)="openDialog()">+</button>
           </div>
-          <app-daily-stats></app-daily-stats>
+          <div style="margin-top: 15rem;"> 
+            <app-daily-stats></app-daily-stats>
+          </div>
         </ng-container>
         <ng-container *ngSwitchCase="'/expenses'" style="font-family: 'Outfit', sans-serif !important;">
           <app-expense-table class="expenses-tab" selectedTab="{{tab}}"></app-expense-table>
